<resources>
    <string name="app_name">MealScope</string>
    <string name="app_tagline">Seafood catalog from TheMealDB</string>
    <string name="back">Kembali</string>
    <string name="favorite">Favorite</string>
    <string name="retry">Coba Lagi</string>
    <string name="add_favorite">Tambah Favorite</string>
    <string name="remove_favorite">Hapus Favorite</string>
    <string name="empty_meals">Data makanan belum tersedia.</string>
    <string name="empty_detail">Detail makanan belum tersedia.</string>
    <string name="favorite_unavailable">Fitur favorite belum tersedia di perangkat ini.</string>
</resources>
